Company Org/src/objects/Monthly_Report__c.object
<CustomObject>
    <fields>
        <fullName>Concretian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concretian</label>
        <referenceTo>Concretian__c</referenceTo>
        <relationshipLabel>Monthly Reports</relationshipLabel>
        <relationshipName>Monthly_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hr_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hr Report</label>
        <referenceTo>Hr_Report__c</referenceTo>
        <relationshipLabel>Monthly Reports</relationshipLabel>
        <relationshipName>Monthly_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Report_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Monthly Report External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notify_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Monthly Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Monthly Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>